# friction-reasoning

./: .cursorrules  .gitignore  MODEL_CARD.md  README.md  env.example  pyproject.toml  requirements.txt  setup.py
benchmark/: combine_results.py  run_eval.py  run_ollama_eval.py
benchmark/results/: all_evals.json  eval-001.json  eval-002.json  eval-003.json  eval-004.json  eval-005.json  eval-006.json  eval-007.json  eval-008.json  eval-009.json  eval-010.json  eval-011.json  eval-012.json  eval-013.json  eval-014.json  eval-015.json  eval-016.json  eval-017.json  eval-018.json  eval-019.json  eval-020.json
docs/: dataset-format.md  friction.md  stream-of-consciousness-example.md  thinking-pattern.md
docs/pushback_ai/: 01_synthetic_pipeline.md  02_prompt_design.md  03_multi_turn_orchestration.md  04_hf_delivery.md  05_finetuning.md  06_deployment.md  07_benchmarking.md  slide_storyboard.md
scripts/: generate_test_dataset.py
src/friction_reasoning/: __init__.py  agent_reasoning.py  demo.py
src/friction_reasoning/agents/: __init__.py  base_agent.py  mechanism_explorer.py  memory_activator.py  perspective_generator.py  problem_framer.py  synthesizer.py
src/friction_reasoning/dataset/: README.md  __init__.py  __main__.py  analyze_starters.py  clean_starters.py  generate_dataset.py  generator.py  upload.py  uploader.py
src/friction_reasoning/llm/: __init__.py  base_prompts.py  client.py  prompts-overthink.py  prompts.py
src/friction_reasoning/llm/templates/: disagreement_mechanism_explorer.txt  disagreement_perspective_generator.txt  disagreement_problem_framer.txt  limitation_acknowledger.txt  mechanism_explorer.txt  memory_activator.txt  perspective_generator.txt  problem_framer.txt  synthesizer.txt
src/friction_reasoning/model_card/: MODEL_CARD.md  get_model_card.py
src/friction_reasoning/model_training/: README.md  __init__.py  analyze_tokens.py  config.yaml  convert_to_gguf.py  merge_for_vllm.py  push_lora_to_hub.py  push_to_hub.py  test_model.py  train.py
tests/: test_mechanism_explorer.py  test_memory_activator.py  test_perspective_generator.py  test_problem_framer.py  test_synthesizer.py
