[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "friction-reasoning-data-gen"
version = "0.1.0"
authors = [
    { name="Leon van Bokhorst", email="mail@leonvanbokhorst.com" },
]
description = "A dataset generator for multi-agent reasoning with designed friction points"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/leonvanbokhorst/friction-reasoning-data-gen"
"Bug Tracker" = "https://github.com/leonvanbokhorst/friction-reasoning-data-gen/issues" 