[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "friction-reasoning-data-gen"
version = "0.1.0"
authors = [
    { name="Leon van Bokhorst", email="mail@leonvanbokhorst.com" },
]
description = "A dataset generator for multi-agent reasoning with designed friction points"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "datasets>=2.10.0",
    "huggingface_hub>=0.20.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "transformers>=4.35.0",
    "unsloth; platform_system=='Linux'",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pytest>=7.0.0",
    "types-setuptools>=67.0.0",
    "typing-extensions>=4.5.0",
]

[project.urls]
"Homepage" = "https://github.com/leonvanbokhorst/friction-reasoning-data-gen"
"Bug Tracker" = "https://github.com/leonvanbokhorst/friction-reasoning-data-gen/issues" 